Fix bugs with contacts box display on mobile

--- a/styles_modal.css
+++ b/styles_modal.css
@@ -100,10 +100,6 @@ img.avatar {
     border-radius: 10%;
 }
 
-.container {
-    padding: 5px;
-    width: 50%;
-}
 
 span.psw {
     float: center;
@@ -130,7 +126,7 @@ span.psw {
     background-color: #fefefe;
     margin: 1% auto 10% auto;
     border: 1px solid #888;
-    width: 70%;
+    width: 80%;
 }
 
 /* The Close Button */
